wait for config_mountroot threads to complete before we tell init it can start up.  this solves the problem where a console device needs mountroot to complete attaching, and must create wsdisplay0 before init tries to open /dev/console.  fixes PR#49709.

XXX: pullup-7